[package]
name = "seed_coin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
raydium-cp-swap = { path = "../safe_pump/raydium-cp-swap/programs/cp-swap", features = ["cpi"] }

# Interface only
safe_pump_interface = { path = "../safe_pump_interface", features = ["cpi"] }

[features]
cpi = []
